agregado apache http components

--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,15 @@
     <maven.compiler.source>14</maven.compiler.source>
     <maven.compiler.target>14</maven.compiler.target>
     <junit.version>4.13.1</junit.version>
+    <hc.version>4.5.10</hc.version>
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>${hc.version}</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
