--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,16 @@
     <maven.compiler.source>14</maven.compiler.source>
     <maven.compiler.target>14</maven.compiler.target>
     <junit.version>4.13.2</junit.version>
+    <jackson.version>2.13.0-rc2</jackson.version>
     <hc.version>4.5.13</hc.version>
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
