--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,11 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven_exec.version>3.0.0</maven_exec.version>
     <maven.compiler.source>14</maven.compiler.source>
     <maven.compiler.target>14</maven.compiler.target>
+    <maven_compiler.version>3.8.1</maven_compiler.version>
+    <maven_exec.version>3.0.0</maven_exec.version>
     <junit.version>4.13.2</junit.version>
     <jackson.version>2.13.0-rc2</jackson.version>
     <hc.version>4.5.13</hc.version>
@@ -54,23 +57,15 @@
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.1</version>
+          <version>${maven_compiler.version}</version>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.2</version>
         </plugin>
         <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.2.0</version>
-        </plugin>
-        <plugin>
           <artifactId>maven-install-plugin</artifactId>
           <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
         </plugin>
         <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
         <plugin>
@@ -80,6 +75,14 @@
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.1.2</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>${maven_exec.version}</version>
+          <configuration>
+            <mainClass>com.proxy.RunProxy</mainClass>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
