--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,18 @@
     <maven.compiler.target>14</maven.compiler.target>
     <maven_compiler.version>3.8.1</maven_compiler.version>
     <maven_exec.version>3.0.0</maven_exec.version>
+    <slf4j.version>2.0.0-alpha5</slf4j.version>
     <junit.version>4.13.2</junit.version>
     <jackson.version>2.13.0</jackson.version>
     <hc.version>4.5.13</hc.version>
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
