--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -1,7 +1,11 @@
-log4j.rootLogger=INFO, fileAppender
+log4j.rootLogger=INFO, fileAppender, stdout
 log4j.appender.fileAppender=org.apache.log4j.RollingFileAppender
 log4j.appender.fileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.fileAppender.layout.ConversionPattern=[%t] %-5p %c %x - %m%n
 log4j.appender.fileAppender.File=logging.log
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=10
+
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{yy-MM-dd HH:mm:ss:SSS} %5p %t %c{2}:%L - %m%n
